@@ -7,20 +7,20 @@ import com.badlogic.gdx.graphics.glutils.ShapeRenderer;
 import com.badlogic.gdx.graphics.glutils.ShapeRenderer.ShapeType;
 
 import com.snake.game.SnakeGame;
-import com.snake.game.entities.Renderizable;
-
 import java.util.*;
 
-public class Snake implements Renderizable  {
+public class Snake implements Renderizable {
     SnakeGame game;
-    List<List<Float>> body;
+    List<List<Integer>> body;
     String direction;
+    String nextDirection;
     Map<String, List<Integer>> directionMap;
 
     public Snake(SnakeGame game) {
         this.game = game;
         direction = "right";
-        directionMap = new HashMap<String, List<Integer>>();
+        nextDirection = direction;
+        directionMap = new HashMap<>();
 
         directionMap.put("up", Arrays.asList(0, 1));
         directionMap.put("down", Arrays.asList(0, -1));
@@ -28,21 +28,14 @@ public class Snake implements Renderizable  {
         directionMap.put("right", Arrays.asList(1, 0));
 
         body = new ArrayList<>();
-        body.add(Arrays.asList(
-                this.game.cellWidth * (this.game.grid_col / 2),
-                this.game.cellHeight * (this.game.grid_col / 2)
-                )
+        List<Integer> head = Arrays.asList(
+                Math.round((float) (this.game.grid_col / 2)),
+                Math.round((float) (this.game.grid_row / 2))
         );
-        body.add(Arrays.asList(
-                this.game.cellWidth * (this.game.grid_col / 2) - this.game.cellWidth,
-                this.game.cellHeight * (this.game.grid_col / 2)
-                )
-        );
-        body.add(Arrays.asList(
-                this.game.cellWidth * (this.game.grid_col / 2) - this.game.cellWidth * 2,
-                this.game.cellHeight * (this.game.grid_col / 2)
-                )
-        );
+
+        body.add(head);
+        body.add(Arrays.asList(head.get(0) - 1, head.get(1)));
+        body.add(Arrays.asList(head.get(0) - 2, head.get(1)));
     }
 
     @Override
@@ -53,22 +46,22 @@ public class Snake implements Renderizable  {
                 switch (keycode) {
                     case Input.Keys.UP:
                         if (!Objects.equals(direction, "down")) {
-                            direction = "up";
+                            nextDirection = "up";
                         }
                         break;
                     case Input.Keys.DOWN:
                         if (!Objects.equals(direction, "up")) {
-                            direction = "down";
+                            nextDirection = "down";
                         }
                         break;
                     case Input.Keys.LEFT:
                         if (!Objects.equals(direction, "right")) {
-                            direction = "left";
+                            nextDirection = "left";
                         }
                         break;
                     case Input.Keys.RIGHT:
                         if (!Objects.equals(direction, "left")) {
-                            direction = "right";
+                            nextDirection = "right";
                         }
                         break;
                 }
@@ -79,65 +72,75 @@ public class Snake implements Renderizable  {
 
     @Override
     public void update() {
-        boolean colisionSnakeAndApple =  this.game.collision(
-                (float)this.body.get(0).get(0),
-                (float)this.body.get(0).get(1),
-                this.game.cellWidth,
-                this.game.cellHeight,
+        boolean colisionSnakeAndApple = this.game.collision(
+                this.body.get(0).get(0),
+                this.body.get(0).get(1),
                 this.game.scene.apple.x,
-                this.game.scene.apple.y,
-                this.game.cellWidth,
-                this.game.cellHeight
+                this.game.scene.apple.y
         );
 
         if (colisionSnakeAndApple) {
             this.game.score += 1;
-            this.game.scene.apple.x = new Random().nextInt(0, this.game.grid_col) * this.game.cellWidth;
-            this.game.scene.apple.y = new Random().nextInt(0, this.game.grid_row) * this.game.cellHeight;
+            this.game.scene.apple.randPos(this);
             System.out.println(this.game.score);
-            List<Float> lastPart = body.getLast();
+            List<Integer> lastPart = body.get(body.size() - 1);
             body.add(Arrays.asList(lastPart.get(0), lastPart.get(1)));
         }
 
-        boolean colisionSnakeAndWall = this.game.collision(
-                (float)this.body.get(0).get(0),
-                (float)this.body.get(0).get(1),
-                this.game.cellWidth,
-                this.game.cellHeight,
-                0F,
-                0F,
-                (float)this.game.width,
-                (float)this.game.height
-        );
-
-        if (!colisionSnakeAndWall) {
-            this.game.running = false;
-        }
-
         for (int i = body.size() - 1; i > 0; i--) {
-            List<Float> current = body.get(i);
-            List<Float> previous = body.get(i - 1);
+            List<Integer> current = body.get(i);
+            List<Integer> previous = body.get(i - 1);
             current.set(0, previous.get(0));
             current.set(1, previous.get(1));
         }
-        List<Float> head = body.get(0);
-        head.set(0, head.get(0) + directionMap.get(direction).get(0) * this.game.cellWidth);
-        head.set(1, head.get(1) + directionMap.get(direction).get(1) * this.game.cellHeight);
+
+        // Atualiza a direção apenas quando a cobra se move
+        direction = nextDirection;
+
+        List<Integer> head = body.get(0);
+        head.set(0, head.get(0) + directionMap.get(direction).get(0));
+        head.set(1, head.get(1) + directionMap.get(direction).get(1));
+
+        boolean colisionSnakeAndWall = (new Object() {
+            public boolean wallColision() {
+                List<Integer> head = body.get(0);
+                return head.get(0) < 0 ||
+                        head.get(0) > game.grid_col ||
+                        head.get(1) < 0 ||
+                        head.get(1) > game.grid_row;
+            }
+        }).wallColision();
+
+        if (colisionSnakeAndWall) {
+            this.game.running = false;
+        }
+
+        boolean colisionHeadAndBody = (new Object() {
+            public boolean bodyColision() {
+                List<Integer> head = body.get(0);
+                for (int i = body.size() - 1; i > 0; i--) {
+                    List<Integer> current = body.get(i);
+                    if (Objects.equals(head.get(0), current.get(0)) &&
+                            Objects.equals(head.get(1), current.get(1))) {
+                        return true;
+                    }
+                }
+                return false;
+            }
+        }).bodyColision();
+
+        if (colisionHeadAndBody) {
+            this.game.running = false;
+        }
     }
 
     @Override
     public void render(ShapeRenderer shape) {
-        for (List<Float> path : body) {
+        for (List<Integer> path : body) {
             shape.begin(ShapeType.Filled);
             shape.setColor(0, 1, 0, 1);
-            shape.rect(path.get(0), path.get(1), this.game.cellWidth, this.game.cellHeight);
-            shape.end();
-
-            shape.begin(ShapeType.Line);
-            shape.setColor((float) 20 / 255, (float) 20 / 255, (float) 20 / 255, 1);
-            shape.rect(path.get(0), path.get(1), this.game.cellWidth, this.game.cellHeight);
+            shape.rect(path.get(0) * this.game.cellWidth, path.get(1) * this.game.cellHeight, this.game.cellWidth, this.game.cellHeight);
             shape.end();
         }
     }
-
 }
